--- a/server/example.env
+++ b/server/example.env
@@ -1,3 +1,10 @@
 PORT=5000
+
+# use this if you use docker-compose
+databaseURI=mongodb://mongodb:27017 
+
+# use this if you have mongodb installed locally
 databaseURI=mongodb://127.0.0.1:27017
+
+# database name
 databaseName=music
